# richfile

./: .gitignore  LICENSE  README.md  demo_notebook.ipynb  pyproject.toml  requirements.txt  requirements_testing.txt  setup.py
.github/workflows/: build.yml  increment_version_workflow.yml  pypi_release.yml
benchmarks/: benchmark_archives.py  benchmark_sqlar.py
richfile/: __init__.py  conversion.py  demo.py  functions.py  saving_loading_functions.py  util.py
richfile/backends/: __init__.py  archive_common.py  directory_backend.py  helpers.py  sqlar_backend.py  tar_backend.py  zip_backend.py
tests/: test_all.py  test_backend_autodetect.py  test_conversion.py  test_guards.py  test_sqlar.py  test_zip_tar.py  tests.py
